extended on rdf wrapper and improved test coverage