@@ -1,12 +1,22 @@
 package at.jku.isse.passiveprocessengine.rdf;
 
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 import org.apache.jena.ontapi.model.OntClass;
+import org.apache.jena.ontapi.model.OntClass.CardinalityRestriction;
+import org.apache.jena.ontapi.model.OntClass.ValueRestriction;
+import org.apache.jena.ontapi.model.OntDataProperty;
+import org.apache.jena.ontapi.model.OntObjectProperty;
+import org.apache.jena.ontapi.model.OntProperty;
+import org.apache.jena.ontapi.model.OntRelationalProperty;
+import org.apache.jena.rdf.model.Resource;
 
+import at.jku.isse.passiveprocessengine.core.BuildInType;
 import at.jku.isse.passiveprocessengine.core.PPEInstanceType;
 import lombok.Getter;
 
@@ -14,6 +24,8 @@ public class RDFInstanceType extends RDFElement implements PPEInstanceType {
 
 	@Getter
 	protected final OntClass type;
+	
+	protected final Map<OntProperty, RDFPropertyType> propWrappers = new HashMap<>();
 	
 	public RDFInstanceType(OntClass element, NodeToDomainResolver resolver) {
 		super(element, resolver);
@@ -24,61 +36,143 @@ public class RDFInstanceType extends RDFElement implements PPEInstanceType {
 	public void setInstanceType(PPEInstanceType arg0) {
 		// noop, cannot override instancetype of an InstanceType (i.e., meta type cannot be overridden)
 	}
+	
+	@Override
+	public PPEInstanceType getInstanceType() {
+		return BuildInType.METATYPE;
+	}
 
 	@Override
+	public void markAsDeleted() {
+		//first we remove the hierarchy below, then itself (instances need to be removed via resolver, not our concern here)
+		resolver.removeTypeCascading(this);
+		for (var subClass : type.subClasses().toList()) { 
+			subClass.removeProperties(); 
+		}
+		super.markAsDeleted();
+		
+	}
+	
+	@Override
 	public PPEPropertyType createListPropertyType(String arg0, PPEInstanceType arg1) {
-		// TODO Auto-generated method stub
-		return null;
+		if (BuildInType.isAtomicType(arg1)) {
+			var prop = resolver.getListBase().addLiteralListProperty(this.type, createPropertyURI(arg0), resolver.resolveAtomicInstanceType(arg1));
+			if (prop == null) { 
+				return null;
+			} else {
+				return insertAndReturn(prop);
+			}
+		} else {
+			var prop = resolver.getListBase().addObjectListProperty(this.type, createPropertyURI(arg0), ((RDFInstanceType) arg1).getType());
+			if (prop == null) { 
+				return null;
+			} else {
+				return insertAndReturn(prop);
+			}
+		}
 	}
 
 	@Override
 	public PPEPropertyType createMapPropertyType(String arg0, PPEInstanceType arg1, PPEInstanceType arg2) {
-		// TODO Auto-generated method stub
-		return null;
+		if (BuildInType.isAtomicType(arg1)) {
+			var prop = resolver.getMapBase().addLiteralMapProperty(this.type, createPropertyURI(arg0), resolver.resolveAtomicInstanceType(arg1));
+			if (prop == null) { 
+				return null;
+			} else {
+				return insertAndReturn(prop);
+			}
+		} else {
+			var prop = resolver.getMapBase().addObjectMapProperty(this.type, createPropertyURI(arg0), ((RDFInstanceType) arg1).getType());
+			if (prop == null) { 
+				return null;
+			} else {
+				return insertAndReturn(prop);
+			}
+		}
 	}
 
 	@Override
 	public PPEPropertyType createSetPropertyType(String arg0, PPEInstanceType arg1) {
-		// TODO Auto-generated method stub
-		return null;
+		var propUri = createPropertyURI(arg0);
+		if (BuildInType.isAtomicType(arg1)) {
+			if (this.element.getModel().getDataProperty(propUri) != null)
+				return null;
+			var prop = this.element.getModel().createDataProperty(propUri);
+			prop.addRange(resolver.resolveAtomicInstanceType(arg1));
+			prop.addDomain(this.type);	
+			return insertAndReturn(prop);
+		} else {
+			if (this.element.getModel().getObjectProperty(propUri) != null)
+				return null;
+			var prop = this.element.getModel().createObjectProperty(createPropertyURI(arg0));
+			prop.addRange(((RDFInstanceType) arg1).getType());
+			prop.addDomain(this.type);	
+			return insertAndReturn(prop);
+		}
+	}
+
+	private String createPropertyURI(String localName) {
+		return this.element.getURI()+"#"+localName;
+	}
+	
+	private PPEPropertyType insertAndReturn(OntRelationalProperty prop) {
+		RDFPropertyType propType = new RDFPropertyType(prop, resolver);
+		propWrappers.put(prop, propType);
+		return propType;
 	}
 
 	@Override
 	public PPEPropertyType createSinglePropertyType(String arg0, PPEInstanceType arg1) {
-		// TODO Auto-generated method stub
-		return null;
+		PPEPropertyType propType = createSetPropertyType(arg0, arg1);
+		if (propType == null)
+			return propType;
+		if (BuildInType.isAtomicType(arg1)) {
+			var maxOneProp = this.element.getModel().createDataMaxCardinality((OntDataProperty) ((RDFPropertyType) propType).getProperty(), 1, null);
+			this.type.addSuperClass(maxOneProp);		
+			return propType;
+		} else {
+			var maxOneProp = this.element.getModel().createObjectMaxCardinality((OntObjectProperty) ((RDFPropertyType) propType).getProperty(), 1, null);
+			this.type.addSuperClass(maxOneProp);		
+			return propType;
+		}
 	}
 
 	@Override
 	public Set<PPEInstanceType> getAllSubtypesRecursively() {
 		return type.subClasses()
-			.map(ontClass -> resolver.resolveToType(ontClass))
+			.map(resolver::resolveToType)
 			.collect(Collectors.toSet());
 	}
 
 	@Override
 	public PPEInstanceType getParentType() {
-		Optional<OntClass> parent = type.asNamed().superClasses(true).findFirst();
-		//TODO: we need to filter some basic rdf/owl classes like restrictions here
-		return parent.map(ontClass -> resolver.resolveToType(ontClass)).orElse(null);
+		Optional<OntClass> parent = type.asNamed().superClasses(true)
+				.filter(superClass -> !(superClass instanceof CardinalityRestriction))
+				.filter(superClass -> !(superClass instanceof ValueRestriction))
+				.findFirst();
+		return parent.map(resolver::resolveToType).orElse(null);
 	}
 
 	@Override
 	public List<String> getPropertyNamesIncludingSuperClasses() {
 		return type.asNamed().declaredProperties()
-			.map(prop -> prop.getLocalName())
-			.collect(Collectors.toList());
+			.map(Resource::getLocalName)
+			.toList();
 	}
 
 	@Override
 	public PPEPropertyType getPropertyType(String arg0) {
-		// TODO Auto-generated method stub
-		return null;
+		var optProp = type.asNamed().declaredProperties()
+			.filter(prop -> prop.getLocalName().equals(arg0))
+			.filter(OntRelationalProperty.class::isInstance)
+			.map(OntRelationalProperty.class::cast)
+			.findFirst();
+		return optProp.map(prop -> propWrappers.computeIfAbsent( prop, k -> new RDFPropertyType((OntRelationalProperty) k, resolver))).orElse(null) ;
 	}
 
 	@Override
 	public boolean hasPropertyType(String arg0) {
-		return type.asNamed().declaredProperties().anyMatch(prop -> prop.getLocalName().equals(arg0));
+		return getPropertyType(arg0) != null;
 	}
 
 	@Override
@@ -93,6 +187,8 @@ public class RDFInstanceType extends RDFElement implements PPEInstanceType {
 			return false;
 		}
 	}
+
+
 
 	
 	
